Correcting Spacing Issues

--- a/src/components/organisms/howItWorksSection/howItWorksSection.module.scss
+++ b/src/components/organisms/howItWorksSection/howItWorksSection.module.scss
@@ -47,7 +47,7 @@
 
     @media screen and (max-width: $bp-medium) {
         flex-direction: column;
-        margin-top: -2rem;
+        margin-top: 8rem;
         padding: 40px 20px;
     }
 }
